[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Overlays/Menus/ItemPanel.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Comic32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/comicbd.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="PanelContainer" type="PanelContainer"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 4
script = ExtResource( 2 )

[node name="Tooltip" type="Control" parent="."]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0

[node name="Label" type="Label" parent="Tooltip"]
margin_left = 80.0
margin_top = 6.0
margin_right = 348.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "test"

[node name="Icon" type="TextureRect" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
texture = ExtResource( 1 )

[node name="Count" type="Label" parent="."]
visible = false
margin_left = 7.0
margin_top = 16.0
margin_right = 71.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 3 )
text = "12"
align = 1

[connection signal="mouse_entered" from="." to="." method="_on_PanelContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PanelContainer_mouse_exited"]
[connection signal="gui_input" from="Icon" to="." method="_on_Icon_gui_input"]
